Avoid content layout shift

--- a/src/assets/aimeos.css
+++ b/src/assets/aimeos.css
@@ -48,6 +48,7 @@
 .md-header {
   background-color: var(--md-default-bg-color, #fff);
   color: var(--md-default-fg-color, #103050);
+  min-height: 62.5px;
 }
 
 .md-header nav {
